<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".HomeFr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/txt_input"
            android:layout_width="match_parent"
            android:layout_height="180dp"

            app:layout_constraintTop_toTopOf="parent"
            android:gravity="start"

            android:textSize="30sp"
            android:hint="@string/temp_hint"
            android:autofillHints="name"
            android:inputType="textMultiLine"

            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:padding="30dp"

            android:background="@drawable/shape_word_background"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@color/white"
            />

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintRight_toRightOf="@+id/txt_input"
            app:layout_constraintBottom_toBottomOf="@+id/txt_input"

            android:src="@drawable/icon_add_word"
            android:contentDescription="@string/temp_btn_add"

            android:padding="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginBottom="-20dp"


            android:backgroundTint="#00FFFFFF"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/rgrp_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/btn_wh"
        android:paddingHorizontal="30dp"
        >
        <RadioButton
            android:id="@+id/btn_wh"
            android:layout_width="130dp"
            android:layout_height="30dp"

            android:button="@null"

            android:text="@string/tl_wh"
            android:textSize="16sp"
            android:gravity="center"

            android:background="@drawable/selector_btn_tl"
            android:textColor="@color/white"
            />
        <RadioButton
            android:id="@+id/btn_libre"
            android:layout_width="130dp"
            android:layout_height="30dp"

            android:button="@null"

            android:text="@string/tl_libre"
            android:textSize="16sp"
            android:gravity="center"

            android:background="@drawable/selector_btn_tl"
            android:textColor="@color/dark_gray"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"

        android:background="@drawable/shape_word_background"
        >
        <TextView
            android:id="@+id/txt_tc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:textSize="20sp"
            android:text="@string/temp_tc"
            android:freezesText="true"

            android:layout_marginVertical="20dp"

            android:textColor="@color/white"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:id="@+id/txt_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:freezesText="true"

                android:gravity="start"
                android:paddingHorizontal="30dp"
                android:text="@string/temp_tl"

                android:textColor="@color/white"

                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>


</LinearLayout>